# giss

./: Cargo.toml  README.md  build.rs
.github/workflows/: audit.yml  rust.yml
data/graphql/: search_issues.graphql  search_pull_requests.graphql
data/graphql/queries/: get_user.graphql  search_issues.graphql  search_pull_requests.graphql
data/graphql/schema/: schema.public.graphql
src/: api.rs  args.rs  cfg.rs  cmd.rs  create.rs  dbg.rs  github_resources.rs  issue.rs  issues_pull_requests.graphql  list.rs  logger.rs  main.rs  project.rs  search.rs  search_query.rs  sort.rs  target.rs  ui.rs  user.rs
