[package]
name = "giss"
version = "0.1.0"
authors = ["Anton Österberg <anton.osterberg@protonmail.com>"]
edition = "2018"
include = ["src/**/*", "data/**/*"]
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "2.0"
lazy_static = "1.4"
regex = "1"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0.101"
sha2 = "0.8.0"
itertools = "0.8"
log = "0.4"
env_logger = "0.7"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }

[profile.release]
lto = true