[package]
name = "giss"
version = "0.1.0"
authors = ["Anton Österberg <anton.osterberg@protonmail.com>"]
edition = "2018"
include = ["build.rs", "src/**/*", "data/**/*"]
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
structopt = "0.3.21"
dirs-next = "1.0.2"
itertools = "0.8"
lazy_static = "1.4"
regex = "1.3"
reqwest = { version = "0.10", features = [ "blocking", "json" ] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sha2 = "0.8"
log = "0.4"
env_logger = "0.7"
termcolor = "1.1"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }

[profile.release]
lto = true