[package]
name = "giss"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"
include = ["build.rs", "src/**/*", "data/**/*"]
publish = false
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
structopt = "0.3"
dirs-next = "1.0.2"
itertools = "0.8"
lazy_static = "1.4"
regex = "1.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
log = "0.4"
env_logger = "0.7"
termcolor = "1.1"
giro = "0.1"

[profile.release]
lto = true

[registries.crates-io]
protocol = "sparse"
